# FEPC

./: .gitignore  CMakeLists.txt  Makefile  README  basic.c  basic.h  config.h  faltung.c  faltung_hilfe.c  faltung_hilfe.h  fft_faltung.c  folge.c  folge.h  folgen_vektor.c  folgen_vektor.h  funktion.c  funktion.h  koeffizienten.c  koeffizienten.h  kuerzen.c  kuerzen.h  main.c  seconds.c
include/: basic.h  config.h  discont.h  faltung.h  faltung_hilfe.h  fepc_cp.h  fepc_easy.h  fepc_easy_helper.h  fepc_easy_sparse.h  fft_faltung.h  folge.h  folgen_vektor.h  funktion.h  gauss.h  interval.h  koeffizienten.h  kuerzen.h  seconds.h
source/: CMakeLists.txt  basic.c  discont.c  faltung.c  faltung_hilfe.c  fepc_cp.c  fepc_easy.c  fepc_easy_helper.c  fepc_easy_sparse.c  fft_faltung.c  folge.c  folgen_vektor.c  funktion.c  interval.c  koeffizienten.c  kuerzen.c  seconds.c
test/: CMakeLists.txt  discont_test.c  fepc_cp_test.c  fepc_easy_test.c  sparsetest.c  stest.c
